--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       </ul>
     </nav>
   </header>
+  <footer>
+    <p>&copy; 2023 My Online Store. All rights reserved.</p>
+  </footer>
 </body>
 </html>
