--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to My Airbuds Store</title>
+  <title>Home - My Online Store</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Mrithik Saha, 2220661 -->
@@ -16,8 +17,26 @@
       </ul>
     </nav>
   </header>
+
+  <main class="home-main">
+    <h1>Welcome to My Airbuds Store</h1>
+    <div class="flex-container">
+      <div class="flex-item">
+        <img src="image/Earbuds-gallery_2-resize.webp" alt="Product 1">
+      </div>
+      <div class="flex-item">
+        <img src="image/ONEPLUS-Buds-3-Pro-resize.webp" alt="Product 2">
+        <p>Discover our amazing products and services.<br> High-quality items at affordable prices. <br> Customer satisfaction is our priority.</p>
+      </div>
+      <div class="flex-item">
+        <img src="image/DSC_0886-ezgif.com-resize.webp" alt="Product 3">
+      </div>
+    </div>
+    <button onclick="alert('Welcome to our store!')">Click Me!</button>
+  </main>
+  
   <footer>
-    <p>&copy; 2023 My Online Store. All rights reserved.</p>
+    <p>&copy; 2025 My Online Store. All rights reserved.</p>
   </footer>
 </body>
 </html>
